--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 
 {
-	"token": "",
-	"guild": "",
-	"role": "",
-	"playing": ""	
+	"token": "NTg2MjgxODgyOTM3NzIwODUz.XQ788A.iCxshOTd8bmkn3QNSUAf7XihT60",
+	"guild": "591353713784913921",
+	"role": "591353950909759498",
+	"playing": "hi"	
 }
